fix textarea overlap over submit button

--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -21,6 +21,7 @@ textarea {
     width: 100%;
     font-size: medium;
     background: beige;
+    resize: none;
 }
 
 .submit-btn {
